# FAST_API

./: pyproject.toml  requirement.txt
1Intoduction_to_fastapi/: main.py
2Building_api_using_fastapi/3pydantic/: model_validator.py  serializtion.py  whypydantic.py
2Building_api_using_fastapi/4async/: 1async.py  2async.py  async.py  async_api.py  synch.py
3database-intergration/crud-app/: crud.py  database.py  main.py  models.py  schemas.py  test.db
4Machinelearning-intergration/: 1ml_model.ipynb  2deep-learning-model.ipynb  keras_model.keras  model.pkl  modeljoblib.joblib
4Machinelearning-intergration/ml_model/: main.py  model.joblib  predict.py  schemas.py  train.py
5Adavanced_Fastapi_concepts/depedency/: configuration-management.py  database-connection.py  user_auth.py
5Adavanced_Fastapi_concepts/jwt_authentication/: auth.py  main.py  models.py  utils.py
5Adavanced_Fastapi_concepts/managing_api_key/: env-apikeys.py  headers.py
5Adavanced_Fastapi_concepts/middleware/: cors-middeleware.py  custome-middleware.py  gzip-middleware.py  https-middleware.py
