[project]
name = "fast-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "authlib>=1.7.2",
    "fastapi>=0.136.0",
    "ipykernel>=7.2.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.14.1",
    "pydantic[email]>=2.13.1",
    "python-multipart>=0.0.29",
    "scikit-learn>=1.8.0",
    "sqlalchemy[asyncio]>=2.0.49",
    "tensorflow>=2.21.0",
    "uvicorn>=0.44.0",
]
